assets/scss/main.scss
$hero: url("{{ .Site.Params.heroImage }}");

$primary: {{ .Site.Params.primaryColor | default "#33C3F0" }};
$secondary: {{ .Site.Params.secondaryColor | default "#0FA0CE" }};
$warningBoxColor: {{ .Site.Params.warningBoxColor | default "#f5e4f9" }};
$noticeBoxColor: {{ .Site.Params.noticeBoxColor | default "#dfe5f4" }};
$lightGray: #eee;
$white: #fff;
$gray: #666;
$black: #222;

a {
	color: $primary;
	text-decoration: none;
}
a:hover {
	color: $secondary;
}

.button.button-primary {
	background-color: $primary;
	border-color: $primary;
}
.button.button-primary:hover {
	background-color: $secondary;
	border-color: $secondary;
}

.container {
	max-width: 1100px;
}

main.home {
	.hero {
		display: none;
		height: 40rem;
		text-align: center;
		background-image: $hero;
		background-repeat: no-repeat;
		background-position: center;
	}
	.titles {
		text-align: center;
		margin: 6rem 0 10rem 0;
	}
	.cards {
		overflow: hidden;
		position: relative;
		margin: 0 auto;
		width: 100%;
	}
	.cards .card {
		text-align: center;
		border-radius: 4px;
		margin: 1rem 1rem 2rem 1rem;
		padding: 1rem;
		border: 1px solid $lightGray;
	}
	.links {
		margin: 10rem 0;
		text-align: center;
	}
	.links ul li {
		list-style: none;
	}
}

@media(min-width: 550px) {
	main.home {
		.hero {
			display: block;
		}
		.titles {
			text-align: center;
			margin: 0 0 10rem 0;
		}
		.cards {
			width: 80%;
		}
	}
}

main .content {
 	padding: 4rem 0;
 	margin-bottom: 0;

 	aside {
 		padding: 1rem;
 		margin-bottom: 2rem;
 	}
 	aside.warning {
 		background-color: $warningBoxColor;
 	}
 	aside.notice {
 		background-color: $noticeBoxColor;
 	}
}

.navaside {
	padding: 4rem 0;

	li {
		list-style: none;
	}

	li > a {
		color: $gray;
	}

	li > a:hover {
		color: $primary;
	}

	li > a.active {
		color: $primary;
	}
}

footer {
	width: 100%;
	border-top: 1px solid $lightGray;

	.links {
		text-align: center;
		padding: 4rem 0;
	}
	.links > a {
		padding: 0 2rem;
		line-height: 4rem;
	}
}

@media(min-width: 520px) {
	.burger-container {
		display: none;
		visibility: hidden;
	}

	.sidenav {
		display: none;
		visibility: hidden;
	}

	.navbar {
		display: block;
		width: 100%;
		height: 6.5rem;
		background: $white;
		z-index: 99;
		border-top: 1px solid $lightGray;
		border-bottom: 1px solid $lightGray;

		.container {
			width: 100%;
		}

		.navbar-list {
			list-style: none;
			margin-bottom: 0;
		}

		.navbar-item {
			position: relative;
			float: left;
			margin-bottom: 0;
		}

		.navbar-right-item {
			float: right;
		}

		.navbar-logo-link {
			display: block;
			margin-right: 20px;
		}

		.navbar-logo-link img {
			display: block;
			height: 4.8rem;
			padding: 0.6rem 0;
		}

		.navbar-link {
			font-size: 11px;
			font-weight: 600;
			letter-spacing: .2rem;
			margin-right: 35px;
			line-height: 6.5rem;
			color: $black;
		}

		.navbar-link.active {
			color: $primary;
		}
	}
}

// Mobile
@media(max-width: 520px) {
	// Hide main navbar
	.navbar {
		display: none;
		visibility: hidden;
	}

	// Show burger menu (Burger container and burger)
	.mobile-navbar {
		display: block;
		width: 100%;
		height: 6.5rem;
		background: $white;
		z-index: 99;
		border-top: 1px solid $lightGray;
		border-bottom: 1px solid $lightGray;
	}

	.burger-container {
		margin: 15px;
		cursor: pointer;
	}

	.burger {
		width: 35px;
		height: 5px;
		border-radius: 2px;
		background-color: $black;
		margin: 6px 0;
	}

	.burger-container:hover {
		.burger {
			background-color: $primary;
		}
	}

	// Side nav styles for mobile
	.sidenav {
		height: 100%;
		width: 0;
		position: fixed;
		z-index: 1;
		top: 0;
		left: 0;
		overflow-x: hidden;
		padding-top: 60px;
		transition: 0.5s;
		border-right: 1px solid $lightGray;
		background-color: $white;
	}

	.sidenav a {
		padding: 8px 8px 8px 32px;
		text-decoration: none;
		font-size: 25px;
		color: $black;
		display: block;
		transition: 0.3s;
	}

	.sidenav a:hover {
		color: $primary;
	}

	.sidenav .closebtn {
		position: absolute;
		top: 0;
		right: 25px;
		font-size: 36px;
		margin-left: 50px;
	}

	@media screen and (max-height: 450px) {
		.sidenav {padding-top: 15px;}
		.sidenav a {font-size: 18px;}
	}

	.logo {
		max-width: 150px;
	}
}

